@@ -1,8 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.29 2005/01/07 14:53:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.30 2005/01/08 09:35:01 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  08 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Partial rewrite of partitioning code in x86Template. No longer shells out to
+  parted to perform actions, now uses all pyparted calls. Code "works" in a
+  test, but still needs lots of TLC. Also modified tests/install.py to work
+  with x86Template and GLIClientConfiguration.
 
   07 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Initial move of partitioning code from ArchTemplate to x86Template.
